[gd_scene load_steps=5 format=2]

[ext_resource path="res://prefab_scenes/ActivationZone/ActivationZone.gd" type="Script" id=1]
[ext_resource path="res://assets/images/circle_grad.png" type="Texture" id=2]
[ext_resource path="res://assets/images/circle_64x64.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]

[node name="ActivationZone" type="Node2D" groups=[
"ActivationZone",
]]
script = ExtResource( 1 )

[node name="InteractionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource( 1 )

[node name="AreaSprite" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 0.784314 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="ButtonSprite" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 3 )
[connection signal="body_entered" from="InteractionArea" to="." method="_on_InteractionArea_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="_on_InteractionArea_body_exited"]
